tests/should_fail/syntax_float_modulo_int.nv
module main

// SHOULD FAIL: Float % Int — modulo only valid for Int % Int
fn test() -> Float {
    return 5.0 % 2
}
println(test())
